fix: Fix an issue that led to wrong positioning of the scroll-indicator after expanding the tag-result-container by clicking a tag and only after that also expanding the tag list for tag selection on the HomePageComponent and fix wrong positioning after window resizing

--- a/src/app/shared/ui-components/scroll-indicator/scroll-indicator.component.scss
+++ b/src/app/shared/ui-components/scroll-indicator/scroll-indicator.component.scss
@@ -21,6 +21,6 @@
   }
   .scroll-indicator-dot.inactive {
     background-color: transparnet;
-    transition: background-color 0.6s ease-in-out;
+    transition: background-color 0.8s ease-in-out;
   }
 }
